Fixes more info button spacing in firefox & maybe in IE Changes logo to png, fixes display in IE Changes logo font to Quattrocento
Conflicts:
	haml/home.haml
	scss/main.scss

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,500|Orbitron:400);
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:400,500|Orbitron:400|Quattrocento+Sans:400);
 @import "compass/css3/images";
 @import "compass/css3/text-shadow";
 
@@ -235,6 +235,17 @@ div.home-body {
     padding:15px 25px 25px 35px;
   }
 }
+div.more-info {
+ position:relative;
+ h4 div {
+  color:#fff;
+  display:inline-block;
+  background-color:#252628;
+  border-radius:8px;
+  padding:20px 40px 20px 40px;
+ }
+ top:30px;
+}
 div.comm-body {
   @extend div.home-body;
   padding-top:40px;
@@ -354,12 +365,13 @@ i.right-float {
 /******************************************/
 /* Header */
 /******************************************/
+
 .logo {
   padding:15px 10px 5px 15px;
-  font-family: 'Orbitron', sans-serif;
+  font-family: 'Quattrocento Sans', sans-serif;
   font-weight:400;
   font-size:16pt;
-  letter-spacing:1.5px;
+  letter-spacing:.8px;
   img {
     margin-top:-4px;
   }
